--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "civicrm-mcp-server",
-  "version": "1.0.0",
-  "description": "Model Context Protocol server for CiviCRM integration",
+  "version": "1.1.0",
+  "description": "Model Context Protocol server for CiviCRM integration with enhanced custom field support",
   "main": "dist/index.js",
   "type": "module",
   "bin": {
